--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ nav .logo{
 }
 
 .nav-link{
-    margin-right: 250px;
+    margin-right: 1px;
     margin-top: 20px;
 }
 .nav-link ul{
@@ -79,11 +79,12 @@ nav .logo{
 
 .container1 {
     background-image: url(dealership.jpg);
-    height: 700px;
+    height: 650px;
     background-size: cover;
     background-repeat: no-repeat;
-    z-index: 1;
+    
 }
+
 
 .right{
     text-align: end;
@@ -150,6 +151,7 @@ nav .logo{
     margin: auto;
 }
 
+
 .card1{
     display: flex;
     flex-wrap: wrap;
@@ -180,7 +182,7 @@ nav .logo{
 }
 
 .card-container button{
-    background-color: black;
+    background-color: #4169E1;
     border: none;
     color: white;
     padding: 10px 90px;
@@ -206,10 +208,36 @@ nav .logo{
 
 /* end container3 */
 
+
+/* dealership */
+
+.dealership{
+    text-align: center;
+    width: 100%;
+    box-sizing: border-box;
+    padding-top: 150px;
+    background-color: white;
+    padding-bottom: 80px;
+}
+
+.pe1{
+    color: white;
+    font-size: 40px;
+    padding-top: 150px;
+}
+
+.pe2{
+    color:  white;
+    font-weight: bold;
+    font-size: 55px;
+}
+/* dealership */
+
 /* Footer */
 .footer{
-    height: 300px;
-    background-color: #11468f;
+    height: 330px;
+    background-color: #4169E1;
+    justify-content: space-around;
 }
 
 .cover{
