--- a/style.css
+++ b/style.css
@@ -233,6 +233,21 @@ nav .logo{
 }
 /* dealership */
 
+
+/* container 4 */
+.container4{
+    background-image: url(catwawawawa.png);
+    height: 650px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    border-radius: 10px 10px 10px 10px;
+    align-items: center;
+    width: 1200px;
+    height: 1000px;
+    margin: auto;
+
+}
+/* end container 4 */
 /* Footer */
 .footer{
     height: 330px;
