final fix (for real this time)

--- a/style.css
+++ b/style.css
@@ -236,7 +236,7 @@ nav .logo{
 
 /* container 4 */
 .container4{
-    background-image: url(catwawawawa.png);
+    background-image: url(catwawawawa.jpg);
     height: 650px;
     background-size: cover;
     background-repeat: no-repeat;
