--- a/login-register/main.css
+++ b/login-register/main.css
@@ -9,7 +9,7 @@
   
   body, html {
       height: 100%;
-      font-family: Poppins-Regular, sans-serif;
+      font-family: Poppins-Regular, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   }
   
   /*---------------------------------------------*/
@@ -141,7 +141,8 @@
     justify-content: center;
     align-items: center;
     padding: 15px;
-    background: #4169E1;
+    background: rgb(2,0,36);
+background: linear-gradient(90deg, rgba(2,0,36,1) 4%, rgba(9,9,121,1) 50%, rgba(0,212,255,1) 100%);
   }
   
   .wrap-login100 {
@@ -165,9 +166,9 @@
   }
   
   .login100-pic img {
-    /* max-width: 100%; */
-    width: 400px;
-    height: 400px;
+    max-width: 100%;
+    /* width: 400px;
+    height: 400px; */
   }
   
   
