--- a/about/about.css
+++ b/about/about.css
@@ -84,12 +84,17 @@ nav .logo{
 /* end navbar */
 /*  about */
 
-.container2cov {
-    background-image: url(/img/dealership.jpg);
+/* .container2cov {
+    background-image: url(../img/dealership.jpg);
     height: 700px;
     background-size: cover;
     background-repeat: no-repeat;
     
+} */
+.slide img{
+    width: auto;
+    height: 700px;
+    filter: blur(3px);
 }
 
 .kanan{
