--- a/gallery/gallery.css
+++ b/gallery/gallery.css
@@ -85,7 +85,7 @@ nav .logo{
 /* container 1 */
 
 .container1 {
-    background-image: url(dealership.jpg);
+    background-image: url(img/dealership.jpg);
     height: 650px;
     background-size: cover;
     background-repeat: no-repeat;
