--- a/login-register/main.css
+++ b/login-register/main.css
@@ -31,7 +31,7 @@
   
   a:hover {
       text-decoration: none;
-     color: #57b846;
+     color: #6081e3;
   }
   
   /*---------------------------------------------*/
