--- a/style.css
+++ b/style.css
@@ -188,7 +188,7 @@ nav .logo{
     width: 100%;
 }
 
-.card-container button{
+/* .card-container button{
     background-color: #4169E1;
     border: none;
     color: white;
@@ -199,6 +199,22 @@ nav .logo{
     margin: auto;
     margin-top: 15px;
     cursor: pointer;
+} */
+
+.card-container .button{
+    cursor: pointer;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #4169E1;
+    color: white;
+    padding: 10px 90px;
+    margin-top: 10px;
+    width: 250px;
+    height: 50px;
+    border-radius: 5px;
+    text-decoration: none;
 }
 
 .img:hover{
