--- a/gallery/gallery.css
+++ b/gallery/gallery.css
@@ -273,264 +273,18 @@ nav .logo{
 }
 /* dealership*/
 
-
-.banner_bg{
-    width: 100%;
-    height: 50vh;
-    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(image/banner_bg.jpeg);
-    background-size: cover;
-    background-position: center;
-}
-
-.banner_bg h1{
+.card-container .button{
+    cursor: pointer;
+    margin: auto;
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 50px;
-    position: relative;
-    top: 50%;
-    color: #fff;
-}
-
-.banner_bg h1 span{
-    color: #4169E1;
-    margin-left: 15px;
-}
-
-
-.main_blog{
-    width: 100%;
-    height: auto;
-    margin-top: 55px;
-    margin-bottom: 15px;
-    display: flex;
-}
-
-.main_blog .slide_1{
-    width: 70%;
-    height: 560px;
-    margin: 0 auto;
-    overflow: hidden;
-    overflow-y: scroll;
-}
-
-.main_blog .slide_1::-webkit-scrollbar{
-    width: 0;
-}
-
-.main_blog .slide_1 .blog_box{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 45px 0;
-    padding-bottom: 10px;
-}
-
-.main_blog .slide_1 .blog_box .blog_card{
-    width: 450px;
-    height: auto;
-    border-radius: 10px;
-    background: #fff;
-    box-shadow: 0 2px 10px rgba(0,0,0,0.5);
-    margin: 0 auto;
-}
-
-.main_blog .slide_1 .blog_box .blog_card .blog_image{
-    width: 450px;
-    height: 300px;
-    overflow: hidden;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-}
-
-.main_blog .slide_1 .blog_box .blog_card .blog_image img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    object-position: center;
-}
-
-.main_blog .slide_1 .blog_box .blog_card .blog_tag .blog_date{
-    width: 100%;
-    color: #4169E1;
-    padding: 15px 0 0 20px;
-    font-size: 14px;
-}
-
-.main_blog .slide_1 .blog_box .blog_card .blog_tag .blog_date i{
-    margin-left: 5px;
-    font-size: 14px;
-    cursor: pointer;
-    margin-left: 8px;
-}
-
-.main_blog .slide_1 .blog_box .blog_card .blog_tag .blog_heading{
-    padding: 10px 20px 10px 20px;
-    font-size: 25px;
-}
-
-.main_blog .slide_1 .blog_box .blog_card .blog_tag .blog_text{
-    padding: 0 20px 10px 20px;
-    text-align: justify;
-    line-height: 21px;
-}
-
-.main_blog .slide_1 .blog_box .blog_card .blog_tag hr{
-    width: 95%;
-    background: #facc22;
-    height: 1px;
-    margin: 0 auto;
-    border: 0;
-    border-radius: 5px;
-}
-
-.main_blog .slide_1 .blog_box .blog_card .blog_tag .view_and_like{
-    padding: 10px 20px 25px 20px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.main_blog .slide_1 .blog_box .blog_card .blog_tag .view_and_like .view{
-    display: flex;
-    align-items: center;
-}
-
-.main_blog .slide_1 .blog_box .blog_card .blog_tag .view_and_like .view p{
-    margin-right: 10px;
-    font-size: 14px;
-}
-
-.main_blog .slide_1 .blog_box .blog_card .blog_tag .view_and_like .like{
-    display: flex;
-    align-items: center;
-    font-size: 14px;
-}
-
-.main_blog .slide_1 .blog_box .blog_card .blog_tag .view_and_like .like i{
-    cursor: pointer;
-    margin-left: 5px;
-}
-
-.main_blog .slide_2{
-    width: 20%;
-    height: 560px;
-    margin: 0 auto;
-    background: #f5f5f5;
-    overflow: hidden;
-    overflow-y: scroll;
-}
-
-.main_blog .slide_2::-webkit-scrollbar{
-    width: 0;
-}
-
-.main_blog .slide_2 .follow_card .follow_head{
-    width: 100%;
-    background: #f5f5f5;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-bottom: 20px;
-    padding: 15px;
-    border-bottom: 1px solid #cccccc;
-    z-index: 5;
-}
-
-.main_blog .slide_2 .follow_card .follow_head .most_follow{
-    font-size: 25px;
-}
-
-.main_blog .slide_2 .follow_card .follow_head .follow_view{
-    font-size: 25px;
-    color: #facc22;
-    cursor: pointer;
-}
-
-.main_blog .slide_2 .follow_card .follow_profiles{
-    display: flex;
-    align-items: center;
-    margin: 0 0 21px 30px;
-    cursor: pointer;
-    position: relative;
-}
-
-.main_blog .slide_2 .follow_card .follow_profiles img{
-    width: 50px;
+    background-color: #4169E1;
+    color: white;
+    padding: 10px 90px;
+    margin-top: 10px;
+    width: 250px;
     height: 50px;
-    border-radius: 50%;
-    object-fit: cover;
-    object-position: center;
-    box-shadow: 0 0 10px rgba(0,0,0,0.3);
-}
-
-.main_blog .slide_2 .follow_card .follow_profiles .follow_profile_tag{
-    margin-left: 20px;
-}
-
-.main_blog .slide_2 .follow_card .follow_profiles .follow_profile_tag p{
-    color: #919191;
-    font-size: 12px;
-}
-
-
-
-
-
-
-
-.blog_banner{
-    width: 100%;
-    height: 30vh;
-    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(image/blog_banner.jpg);
-    background-size: cover;
-    background-position: center;
-    margin: 20px 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.blog_banner .blog_banner_tag h2{
-    color: #fff;
-    font-size: 40px;
-    line-height: 23px;
-    margin-left: 140px;
-    margin-right: 80px;
-}
-
-.blog_banner .blog_banner_tag h2 span{
-    font-size: 25px;
-}
-
-.blog_banner form{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.blog_banner form input{
-    padding: 15px;
-    width: 350px;
-    border-radius: 30px;
-    outline: none;
-    border: 2px solid #facc22;
-    font-size: 15px;
-}
-
-.blog_banner form .blog_sub .email{
-    position: relative;
-    left: 30px;
-}
-
-.blog_banner form button{
-    background: #facc22;
-    outline: none;
-    padding: 10px 12px;
-    position: relative;
-    right: 75px;
-    border: 0;
-    border-radius: 30px;
-    cursor: pointer;
-    font-weight: bold;
-    color: #fff;
+    border-radius: 5px;
+    text-decoration: none;
 }
